kapt 삭제